tests/invalidTest/other/for_total_break_break.q
# EXPECT the command in for loop cannot be total return or break

def sint64 errorTest(){
    for sint64 i , i<5, 1
        break
} 